fix: show thread details card when param defined. Add custom scrollbar styles

--- a/src/app.css
+++ b/src/app.css
@@ -95,3 +95,33 @@ html,body{
 
   --radius: 0.5rem;
 }
+
+
+.custom-h-scrollbar::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+}
+
+.custom-h-scrollbar::-webkit-scrollbar-track {
+  background-color: #25262b;
+}
+
+.custom-h-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #909296;
+  border-radius: 9999px;
+}
+
+.custom-v-scrollbar::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+}
+
+.custom-v-scrollbar::-webkit-scrollbar-track {
+  background-color: #25262b;
+  border-radius: 9999px;
+}
+
+.custom-v-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #909296;
+  border-radius: 9999px;
+}
